force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Caps_Term__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Caps_Term__c</fullName>
    <label>Survival Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>13 to 18 Months</fullName>
            </value>
            <value>
                <fullName>19 to 24 Months</fullName>
            </value>
            <value>
                <fullName>24+ Months</fullName>
            </value>
            <value>
                <fullName>6 Months or Less</fullName>
            </value>
            <value>
                <fullName>7 to 12 Months</fullName>
            </value>
            <value>
                <fullName>Express - No Survival</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>