force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Caps_Threshold_Remedy__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Caps_Threshold_Remedy__c</fullName>
    <label>Indemnification As Exclusive Remedy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown/Silent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>