force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Caps_Type__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Caps_Type__c</fullName>
    <label>Caps Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Yes  - Less than Purchase Price</fullName>
            </value>
            <value>
                <fullName>Yes - But Indeterminable</fullName>
            </value>
            <value>
                <fullName>Yes - Equal to Purchase Price</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>