force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Escrow_Size_Percent__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Escrow_Size_Percent__c</fullName>
    <formula>BLANKVALUE(Indemnity_Escrow_Size__c /  Total_Purchase_Price__c ,0)</formula>
    <label>Size (% of Purchase Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>