force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Escrow_Type__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Escrow_Type__c</fullName>
    <label>Escrow/Holdbacks Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Remedy</fullName>
            </value>
            <value>
                <fullName>Not Exclusive Remedy</fullName>
            </value>
            <value>
                <fullName>Setoff to Exclusive Remedies</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>