force-app/main/default/objects/Engagement_Summary__c/fields/Is_Buyer_Able_To_Offset_Earnout__c.field-meta.xml
<CustomField>
    <fullName>Is_Buyer_Able_To_Offset_Earnout__c</fullName>
    <label>Is Buyer Able To Offset Earnout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express Yes</fullName>
            </value>
            <value>
                <fullName>Express No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Indeterminable</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>