force-app/main/default/objects/Engagement_Summary__c/fields/Is_Completion_of_CIM_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Is_Completion_of_CIM_Creditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completion of CIM Creditable</label>
    <type>Checkbox</type>
</CustomField>