force-app/main/default/objects/Engagement_Summary__c/fields/Is_First_Round_Bid_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Round_Bid_Creditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Round Bid Creditable</label>
    <type>Checkbox</type>
</CustomField>