force-app/main/default/objects/Engagement_Summary__c/fields/Is_Other_Fee_01_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Fee_01_Creditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Other Fee 01 Creditable</label>
    <type>Checkbox</type>
</CustomField>