force-app/main/default/objects/Engagement_Summary__c/fields/Is_Preferred_Equity__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred_Equity__c</fullName>
    <label>Is Preferred Equity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>