force-app/main/default/objects/Engagement_Summary__c/fields/Is_Signed_Agreement_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Is_Signed_Agreement_Creditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signed Agreement Creditable</label>
    <type>Checkbox</type>
</CustomField>