force-app/main/default/objects/Engagement_Summary__c/fields/Key_Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Key_Contract_Comments__c</fullName>
    <description>Key Contract Comments</description>
    <label>Key Contract Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>