force-app/main/default/objects/Engagement_Summary__c/fields/Legacy_CS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CS_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy CS ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>