force-app/main/default/objects/Engagement_Summary__c/fields/Lockup_Controlling_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Lockup_Controlling_Shareholders__c</fullName>
    <label>Lockup Controlling Shareholders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>