force-app/main/default/objects/Engagement_Summary__c/fields/Lockup_Insiders__c.field-meta.xml
<CustomField>
    <fullName>Lockup_Insiders__c</fullName>
    <label>Lockup Insiders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>