force-app/main/default/objects/Engagement_Summary__c/fields/LOI__c.field-meta.xml
<CustomField>
    <fullName>LOI__c</fullName>
    <label>LOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>