force-app/main/default/objects/Engagement_Summary__c/fields/Low_52_Week_Percent__c.field-meta.xml
<CustomField>
    <fullName>Low_52_Week_Percent__c</fullName>
    <formula>BLANKVALUE(Offer_Price__c /  Low_52_Week__c - 1.0,0)</formula>
    <label>Low 52 Week Premium</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>