force-app/main/default/objects/Engagement_Summary__c/fields/Mark_All_Carveouts_as_No__c.field-meta.xml
<CustomField>
    <fullName>Mark_All_Carveouts_as_No__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>&quot;Check&quot; this field to set all Carveouts below to &quot;No&quot;. You can override individual values after.</inlineHelpText>
    <label>Mark All Carveouts as No</label>
    <type>Checkbox</type>
</CustomField>