force-app/main/default/objects/Engagement_Summary__c/fields/Members_On_Special_Committee__c.field-meta.xml
<CustomField>
    <fullName>Members_On_Special_Committee__c</fullName>
    <label>Members On Special Committee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>