force-app/main/default/objects/Engagement_Summary__c/fields/Metrics_Used__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Used__c</fullName>
    <label>Metrics Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>