force-app/main/default/objects/Engagement_Summary__c/fields/No_Credit_Facility_Data__c.field-meta.xml
<CustomField>
    <fullName>No_Credit_Facility_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Credit Facility Data</label>
    <type>Checkbox</type>
</CustomField>