force-app/main/default/objects/Engagement_Summary__c/fields/Original_Bidder_Had_Matching_Right__c.field-meta.xml
<CustomField>
    <fullName>Original_Bidder_Had_Matching_Right__c</fullName>
    <label>Original Bidder Had Matching Right</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>