force-app/main/default/objects/Engagement_Summary__c/fields/Other_Fee_01__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_01__c</fullName>
    <label>Other Fee 01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>