force-app/main/default/objects/Engagement_Summary__c/fields/Other_Fee_02__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_02__c</fullName>
    <label>Other Fee 02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>