force-app/main/default/objects/Engagement_Summary__c/fields/Other_Fee_Type_02__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Type_02__c</fullName>
    <label>Other Fee Type 02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>