force-app/main/default/objects/Engagement_Summary__c/fields/Outstanding_Lockup_Percent__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Lockup_Percent__c</fullName>
    <label>Outstanding Lockup Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>