force-app/main/default/objects/Engagement_Summary__c/fields/Payment_On_Closing__c.field-meta.xml
<CustomField>
    <fullName>Payment_On_Closing__c</fullName>
    <formula>Total_Fee__c - Total_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment On Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>