force-app/main/default/objects/Engagement_Summary__c/fields/PB_Of_BS_Percent__c.field-meta.xml
<CustomField>
    <fullName>PB_Of_BS_Percent__c</fullName>
    <formula>Prelim_Bids_Total__c /  Books_Sent_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PB Of BS Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>