force-app/main/default/objects/Engagement_Summary__c/fields/Pitch_EBITDA_LTM__c.field-meta.xml
<CustomField>
    <fullName>Pitch_EBITDA_LTM__c</fullName>
    <label>Pitch EBITDA LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>