force-app/main/default/objects/Engagement_Summary__c/fields/Pitch_Low_FYE__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Low_FYE__c</fullName>
    <formula>Pitch_Value_Low__c/Pitch_EBITDA_FYE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitch Low FYE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>