force-app/main/default/objects/Engagement_Summary__c/fields/Pitch_MP__c.field-meta.xml
<CustomField>
    <fullName>Pitch_MP__c</fullName>
    <formula>(Pitch_Value_High__c + Pitch_Value_Low__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitch MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>