force-app/main/default/objects/Engagement_Summary__c/fields/Pitch_MP_FYE__c.field-meta.xml
<CustomField>
    <fullName>Pitch_MP_FYE__c</fullName>
    <formula>((Pitch_Value_High__c + Pitch_Value_Low__c) / 2.0) / Pitch_EBITDA_FYE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitch MP FYE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>