force-app/main/default/objects/Engagement_Summary__c/fields/Pitch_Value_Low__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Value_Low__c</fullName>
    <label>Pitch Value Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>