force-app/main/default/objects/Engagement_Summary__c/fields/Post_Closing_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Adjustment__c</fullName>
    <label>Other Post Closing Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>