force-app/main/default/objects/Engagement_Summary__c/fields/Post_Closing_Adjustment_Note__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Adjustment_Note__c</fullName>
    <label>Post Closing Adjustment Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>