force-app/main/default/objects/Engagement_Summary__c/fields/Prelim_Bids_Financial_Percent__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Bids_Financial_Percent__c</fullName>
    <formula>Prelim_Bids_Financial_Total__c /  Contacted_Financial_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prelim Bids Financial Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>