force-app/main/default/objects/Engagement_Summary__c/fields/Prelim_Bids_Financial_Total__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Bids_Financial_Total__c</fullName>
    <label>Prelim Bids Financial Total</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>