force-app/main/default/objects/Engagement_Summary__c/fields/Prelim_Bids_Strategic_Total__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Bids_Strategic_Total__c</fullName>
    <formula>Prelim_Bids_Strategic_Domestic__c + Prelim_Bids_Strategic_International__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prelim Bids Strategic Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>