force-app/main/default/objects/Engagement_Summary__c/fields/Preparing_Party__c.field-meta.xml
<CustomField>
    <fullName>Preparing_Party__c</fullName>
    <label>Preparing Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>