force-app/main/default/objects/Engagement_Summary__c/fields/Presentations_Financial_Percent__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Financial_Percent__c</fullName>
    <formula>Presentations_Financial_Total__c /  Contacted_Financial_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentations Financial Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>