force-app/main/default/objects/Engagement_Summary__c/fields/Presentations_Financial_Total__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Financial_Total__c</fullName>
    <label>Presentations Financial Total</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>