force-app/main/default/objects/Engagement_Summary__c/fields/Presentations_Strategic_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Strategic_Domestic__c</fullName>
    <label>Presentations Strategic Domestic</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>