force-app/main/default/objects/Engagement_Summary__c/fields/Presentations_Strategic_Int_Percent__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Strategic_Int_Percent__c</fullName>
    <formula>Presentations_Strategic_International__c / Contacted_Strategic_International__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentations Strategic Int Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>