force-app/main/default/objects/Engagement_Summary__c/fields/Presentations_Total__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Total__c</fullName>
    <formula>Presentations_Strategic_Domestic__c + Presentations_Strategic_International__c + Presentations_Financial_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentations Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>