force-app/main/default/objects/Engagement_Summary__c/fields/Price_Per_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Book__c</fullName>
    <formula>Engagement__r.Est_Transaction_Size_MM__c /  Book_Value__c</formula>
    <label>Price Per Book</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>