force-app/main/default/objects/Engagement_Summary__c/fields/Prior_Close__c.field-meta.xml
<CustomField>
    <fullName>Prior_Close__c</fullName>
    <label>Prior Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>