force-app/main/default/objects/Engagement_Summary__c/fields/Purchase_Price_Base__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Base__c</fullName>
    <label>Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>