force-app/main/default/objects/Engagement_Summary__c/fields/Report_Subject_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Subject_Fields__c</fullName>
    <description>Reporting Use 
01 = Name 
02 = Billing Street 
03 = Billing City 
04 = Billing State 
05 = Billing Postal Code 
06 = Billing Country 
07 = Phone 
08 = Fax 
09 = Ownership 
10 = Industry Group 
11 = Industry Umbrella</description>
    <formula>Engagement__r.Report_Subject_Fields__c</formula>
    <label>Report Subject Fields</label>
    <type>Text</type>
</CustomField>