force-app/main/default/objects/Engagement_Summary__c/fields/Representations_and_Warranties_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Representations_and_Warranties_Insurance__c</fullName>
    <description>Did the Buyer/Seller Purchase R&amp;W Insurance</description>
    <label>Representations and Warranties Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>