force-app/main/default/objects/Engagement_Summary__c/fields/Reps_and_Warranties_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reps_and_Warranties_Insurance_Amount__c</fullName>
    <description>What was the insurance policy coverage amount</description>
    <label>Reps and Warranties Insurance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>