force-app/main/default/objects/Engagement_Summary__c/fields/Reps_and_Warranties_Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reps_and_Warranties_Insurance_Cost__c</fullName>
    <description>What was the Cost of the Insurance Policy</description>
    <label>Reps and Warranties Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>