force-app/main/default/objects/Engagement_Summary__c/fields/Reps_and_Warranties_Insurance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reps_and_Warranties_Insurance_Limit__c</fullName>
    <description>What was the Limit of the Insurance Coverage Purchased</description>
    <label>Reps and Warranties Insurance Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>