force-app/main/default/objects/Engagement_Summary__c/fields/Reps_and_Warranties_Insurance_Retention__c.field-meta.xml
<CustomField>
    <fullName>Reps_and_Warranties_Insurance_Retention__c</fullName>
    <description>What was the Retention Amount</description>
    <label>Reps and Warranties Insurance Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>