force-app/main/default/objects/Engagement_Summary__c/fields/Required_New_Employment_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Required_New_Employment_Agreements__c</fullName>
    <description>Did the Buyer Require Management to Sign New Employment Agreements?</description>
    <inlineHelpText>Did the Buyer Require Management to Sign New Employment Agreements?</inlineHelpText>
    <label>Req. Mgmt to Sign New Emp. Agreements?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>