force-app/main/default/objects/Engagement_Summary__c/fields/Required_Rollover_Equity__c.field-meta.xml
<CustomField>
    <fullName>Required_Rollover_Equity__c</fullName>
    <description>Did the Buyer Require Management to Rollover Any Equity?</description>
    <inlineHelpText>Did the Buyer Require Management to Rollover Any Equity?</inlineHelpText>
    <label>Was Mgmt Required to Rollover Equity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>