force-app/main/default/objects/Engagement_Summary__c/fields/Retainer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fees__c</fullName>
    <label>Retainer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>